kernel/tests/invalid_data_declarations/mismatched_parameter.ck
data SomeTy : Type where

data Invalid (T : Type) : Type where
  | c : Invalid SomeTy